fixing add answer on mobile

--- a/src/components/Form/CreatePoll/CreatePoll.scss
+++ b/src/components/Form/CreatePoll/CreatePoll.scss
@@ -89,6 +89,7 @@
 
                     @media screen and (max-width: 992px) {
                         width: 100%;
+
                         .shadow {
                             width: 100%;
                         }
@@ -109,6 +110,7 @@
                     display: flex;
                     flex-direction: column;
                     gap: 20px;
+
                     >div:not(:last-child) {
                         border-right: none !important;
                     }
@@ -274,6 +276,22 @@
                         .answer:hover {
                             border-radius: 5px;
                             background-color: rgba(211, 211, 211, 0.3);
+                        }
+
+                        .answer-adder {
+                            button {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                height: 25px;
+                                width: 25px;
+                                border-radius: 50px;
+                                background-color: #00bf63;
+                            }
+
+                            button:active {
+                                background-color: #00783e;
+                            }
                         }
                     }
                 }
